--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -100,7 +100,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtillity.cpp" />
     <ClCompile Include="Matrix4.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
+    <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2d\DebugText.h" />
@@ -129,6 +131,7 @@
     <ClInclude Include="math\Vector2.h" />
     <ClInclude Include="math\Vector3.h" />
     <ClInclude Include="math\Vector4.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="scene\GameScene.h" />
   </ItemGroup>
   <ItemGroup>
